--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,16 +5,24 @@ on:
     types:
       - closed
 
+
 jobs:
   update-leaderboard:
     runs-on: ubuntu-latest
     steps:
       - name: Check out code
         uses: actions/checkout@v2
-
+       
+      - name: Use a secret
+        env:
+          MY_SECRET: ${{ secrets.api_token }}
+        run: |
+          echo "The secret value is $MY_SECRET"
+         
       - name: Update Leaderboard
         run: |
-          # Add your script command here to update the leaderboard data
+          # Pass the api_token secret as an environment variable to your script
+          export API_TOKEN=$MY_SECRET
           python update_leaderboard.py
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
