--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,13 +15,12 @@ jobs:
        
       - name: Use a secret
         env:
-          MY_SECRET: ${{ secrets.api_token }}
+          MY_SECRET: ${{ secrets.API_TOKEN }}
         run: echo $MY_SECRET
          
       - name: Update Leaderboard
         run: |
           # Pass the api_token secret as an environment variable to your script
-          export api_token=$MY_SECRET
           python update_leaderboard.py
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
