--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,14 +15,13 @@ jobs:
        
       - name: Use a secret
         env:
-          MY_SECRET: ${{ secrets.API_TOKEN }}
+          API_TOKEN: ${{ secrets.API_TOKEN }}
         run: |
-          echo "The secret value is $MY_SECRET"
+          # echo "The secret value is $MY_SECRET"
          
       - name: Update Leaderboard
-        run: |
-          # Pass the api_token secret as an environment variable to your script
-          export API_TOKEN=$MY_SECRET
-          python update_leaderboard.py
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          # Pass the api_token secret as an environment variable to your script
+          python update_leaderboard.py
