--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,6 +33,11 @@ jobs:
         run: |
           # Pass the API_TOKEN secret as an environment variable to your script
           python update_leaderboard.py
+      - name: Configure Git
+        run: |
+          git config --global user.email "davidsonnyegbeahie@gmail.com"
+          git config --global user.name "Odion-Sonny"
+        
       - name: Commit and Push Changes
         run: |
           git add README.md
