--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,8 +21,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          # pip install -r requirements.txt
-          pip install python-decouple==3.8
+          # pip install python-decouple==3.8
           pip install requests==2.31.0
 
       - name: Use a secret
