--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,12 +21,13 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          # pip install python-decouple==3.8
           pip install requests==2.31.0
 
       - name: Use a secret
         env:
           API_TOKEN: ${{ secrets.API_TOKEN }}
+          EMAIL: ${{ secrets.EMAIL }}
+          USERNAME: ${{ secrets.USERNAME }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           
         run: |
@@ -34,8 +35,8 @@ jobs:
           python update_leaderboard.py
       - name: Configure Git
         run: |
-          git config --global user.email "davidsonnyegbeahie@gmail.com"
-          git config --global user.name "Odion-Sonny"
+          git config --global user.email $EMAIL
+          git config --global user.name $USERNAME
         
       - name: Commit and Push Changes
         run: |
