--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,6 +5,11 @@ on:
     types:
       - closed
 
+# on:
+#   push:
+#     branches:
+#       - main  # Replace with the branch you want to trigger the workflow on
+
 jobs:
   update-leaderboard:
     runs-on: ubuntu-latest
